[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Buttons/Load_Game_Button.gd" type="Script" id=1]
[ext_resource path="res://ObjectSprites/MikeFace.png" type="Texture" id=2]
[ext_resource path="res://Themes/20Theme.tres" type="Theme" id=3]
[ext_resource path="res://Themes/30Theme.tres" type="Theme" id=4]
[ext_resource path="res://Background_Images/Button_Pressed_Texture.png" type="Texture" id=5]
[ext_resource path="res://Background_Images/Button_Up_Texture.png" type="Texture" id=6]


[node name="LoadGame" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -572.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 148.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer2"]
modulate = Color( 1, 0.470588, 0, 1 )
margin_right = 1280.0
margin_bottom = 148.0
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
margin_right = 1280.0
margin_bottom = 148.0

[node name="Label3" type="Label" parent="MarginContainer2/HBoxContainer"]
margin_right = 10.0
margin_bottom = 148.0
rect_min_size = Vector2( 10, 14 )
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 14.0
margin_right = 544.0
margin_bottom = 148.0
size_flags_horizontal = 3

[node name="LoadGame" type="TextureButton" parent="MarginContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 530.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer2/LoadGame"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filename" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer2"]
visible = false
margin_top = 162.0
margin_right = 525.0
margin_bottom = 176.0

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer2"]
visible = false
margin_top = 134.0
margin_right = 530.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 9
size_flags_vertical = 9

[node name="Face1" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 548.0
margin_right = 608.0
margin_bottom = 148.0
size_flags_vertical = 3

[node name="Face1" type="TextureRect" parent="MarginContainer2/HBoxContainer/Face1"]
margin_right = 60.0
margin_bottom = 148.0
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Face2" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
visible = false
margin_left = 472.0
margin_right = 532.0
margin_bottom = 148.0
size_flags_vertical = 3

[node name="Face2" type="TextureRect" parent="MarginContainer2/HBoxContainer/Face2"]
margin_right = 60.0
margin_bottom = 148.0
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Face3" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
visible = false
margin_left = 504.0
margin_right = 564.0
margin_bottom = 148.0
size_flags_vertical = 3

[node name="Face3" type="TextureRect" parent="MarginContainer2/HBoxContainer/Face3"]
margin_right = 60.0
margin_bottom = 148.0
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Face4" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
visible = false
margin_left = 568.0
margin_right = 628.0
margin_bottom = 148.0
size_flags_vertical = 3

[node name="Face4" type="TextureRect" parent="MarginContainer2/HBoxContainer/Face4"]
margin_right = 60.0
margin_bottom = 148.0
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 612.0
margin_right = 1142.0
margin_bottom = 148.0
size_flags_horizontal = 3
theme = ExtResource( 3 )

[node name="Date" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
margin_right = 530.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Date Saved: %s"

[node name="Time" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 530.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Time Saved: %s"

[node name="Location" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 530.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Player Location: %s"

[node name="TotalTimePlayed" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 530.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Total Playtime: %s"

[node name="File" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 84.0
margin_right = 563.0
margin_bottom = 98.0

[node name="Other" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
margin_left = 1146.0
margin_top = 74.0
margin_right = 1280.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.25

[node name="ColorRect" type="ColorRect" parent="MarginContainer2/HBoxContainer/Other"]
margin_right = 134.0
color = Color( 0.721569, 0.0470588, 0.0470588, 1 )

[node name="Delete_File" type="TextureButton" parent="MarginContainer2/HBoxContainer/Other/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -22.0
margin_right = -25.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/Other/ColorRect/Delete_File"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Delete File"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer2/HBoxContainer/VBoxContainer2/LoadGame" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/Other/ColorRect/Delete_File" to="." method="_on_Delete_File_pressed"]
